# zstu-user-notifications

./: CMakeLists.txt
ZstuUserNotifications/html/: index.html
ZstuUserNotifications/include/: localize.h  receiver.h  server.h  terminal_cli.h
ZstuUserNotifications/src/: main.c  receiver.c  server.c  terminal_cli.c
